# 3d-again

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: CMakeLists.txt
src/drawer/: 3DObjectDrawer.cpp  3DObjectDrawer.h  cameraDrawer.cpp  cameraDrawer.h
src/file_loader/: obj.cpp  obj.h  stl.cpp  stl.h
src/models/: 3DObject.cpp  3DObject.h  camera.cpp  camera.h  point.cpp  point.h
src/shaders/: fragment.shader  program.cpp  program.h  shader.cpp  shader.h  vertex.shader
src/ui/: inputDevice.cpp  inputDevice.h
tests/: CMakeLists.txt  point_test.cpp
tests/file_loader/: stl_test.cpp
tests/files/: triangle.stl
